deployment/basketserver-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basketserver-service
  labels:
    app: basketserver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basketserver-service
  template:
    metadata:
      labels:
        app: basketserver-service
    spec:
      containers:
        - name: basketserver-service
          image: cryptimeleon/incentive-service-basketserver:0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: basketserver-service
spec:
  selector:
    app: basketserver-service
  type: ClusterIP
  ports:
    - port: 8000
