deployment/credit-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-service
  labels:
    app: credit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-service
  template:
    metadata:
      labels:
        app: credit-service
    spec:
      containers:
        - name: credit-service
          image: cryptimeleon/incentive-service-credit:0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: credit-service
spec:
  selector:
    app: credit-service
  type: ClusterIP
  ports:
    - port: 8000
