deployment/issue-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-service
  labels:
    app: issue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-service
  template:
    metadata:
      labels:
        app: issue-service
    spec:
      containers:
        - name: issue-service
          image: upbcuk/incentive-service-issue:0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: issue-service
spec:
  selector:
    app: issue-service
  type: ClusterIP
  ports:
    - port: 8000
